<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="false"
    android:background="@drawable/btnbackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/main3layout_width"
        android:layout_height="@dimen/main3layout_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/lgsin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/mai3_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/main3_text"
        android:textColor="#007474"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="444dp">


        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/texteditor"
            android:ems="10"
            android:hint="@string/main3_hint"
            android:inputType="textPersonName"
            android:textColorHint="#745A5959"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/texteditor"
            android:ems="10"
            android:hint="@string/main3hint"
            android:inputType="textPersonName"
            android:textColorHint="#745A5959"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/btn_container"
            android:text="@string/main3_btn"

            android:textColor="#007474"

            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>