<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="40dp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="-511dp">

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="@dimen/mored_layoutwid"
        android:layout_height="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_bed_24"
        tools:layout_editor_absoluteY="432dp" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="@dimen/mored_ayoutwid"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:srcCompat="@drawable/baseline_square_24"
        tools:layout_editor_absoluteY="431dp" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="@dimen/moredlayoutwid"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:srcCompat="@drawable/baseline_security_24"
        tools:layout_editor_absoluteY="431dp" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="@dimen/mored_layoutwidth"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:srcCompat="@drawable/baseline_bathtub_24"
        tools:layout_editor_absoluteY="430dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="@dimen/mored_layout_width"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24"
        tools:layout_editor_absoluteX="-1dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/moredlayout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/mored_topic_ext"
        android:textColor="#A8000000"
        android:textSize="23dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_bookmark_border_24"
        tools:layout_editor_absoluteX="284dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="40dp">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="@dimen/more_smpic_width"
            android:layout_height="@dimen/mored_smpic_height"
            android:elevation="4dp"
            app:srcCompat="@drawable/bath"
            tools:layout_editor_absoluteX="220dp"
            tools:layout_editor_absoluteY="177dp" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="@dimen/moredayout_width"
            android:layout_height="90dp"
            android:elevation="4dp"
            app:srcCompat="@drawable/kitch"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="177dp" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="@dimen/moredlyoutwidth"
            android:layout_height="@dimen/moredayout_height"
            android:elevation="4dp"
            app:srcCompat="@drawable/room"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="177dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/Prp_catloglayout_width"
            android:layout_height="@dimen/moredlayout_height"
            app:srcCompat="@drawable/sigmund"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="31dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="@dimen/moredlayoutwidth"
            android:layout_height="@dimen/mored_layout_height"
            android:background="@drawable/hotbtn"
            android:text="@string/mored_price"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="53dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="344dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catlog_MillenniumHouse"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mored_location"
            android:textColor="#8A000000"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="36dp" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_share_24"
            tools:layout_editor_absoluteX="288dp"
            tools:layout_editor_absoluteY="19dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mored_description"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="500dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/listback"
        android:padding="10dp"
        android:text="@string/mored_content"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/btn_container"

        android:text="@string/mored_rentbtn"

        android:textColor="#007474"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="671dp" />

</androidx.constraintlayout.widget.ConstraintLayout>