<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="40dp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="-511dp">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="33dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/moredlayout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/mored_topic_ext"
        android:textColor="#A8000000"
        android:textSize="23dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="357dp"
        android:layout_height="397dp"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="92dp">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="@dimen/map_wid"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/maph"
            tools:layout_editor_absoluteY="-4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="387dp"
        android:layout_height="160dp"
        android:background="@drawable/listback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="486dp">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:text="@string/catlog_MillenniumHouse"
            android:textColor="#BF000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="42dp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="155dp"
            android:layout_height="20dp"
            android:text="@string/catlog_Address"
            android:textColor="#8A000000"
            android:textSize="12dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rs-10000"
            android:textColor="#FF5722"
            android:textSize="12dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="94dp" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="102dp"
            android:layout_height="105dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="28dp">

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/sigmund" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="295dp"
        android:layout_height="56dp"
        android:elevation="4dp"
        android:text="@string/map_location"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="52dp" />

</androidx.constraintlayout.widget.ConstraintLayout>