<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="40dp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="-511dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/pop_prop"
        android:textColor="@color/black"
        android:textSize="23dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/caltlog_viewmore"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="40dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/Prp_catloglayout_width"
            android:layout_height="262dp"
            app:srcCompat="@drawable/sigmund"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="31dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="105dp"
            android:layout_height="28dp"
            android:background="@drawable/hotbtn"
            android:text="@string/catlog_rs1000"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="53dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="344dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catlog_MillenniumHouse"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catlog_Address"
            android:textColor="#8A000000"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="36dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/catlog_layoutwidth"
            android:layout_height="44dp"
            app:srcCompat="@drawable/baseline_bookmark_24"
            tools:layout_editor_absoluteX="270dp"
            tools:layout_editor_absoluteY="9dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="426dp">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/catlog_populerproperty"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/caltlog_viewmore"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="387dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/listback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:text="@string/catlog_MillenniumHouse"
            android:textColor="#BF000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="42dp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="155dp"
            android:layout_height="20dp"
            android:text="@string/catlog_Address"
            android:textColor="#8A000000"
            android:textSize="12dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rs-12000"
            android:textColor="#FF5722"
            android:textSize="12dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="94dp" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="102dp"
            android:layout_height="105dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="28dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/house" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>